# jarl

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  dist-workspace.toml  foo.R  foo2.R  justfile
.github/ISSUE_TEMPLATE/: bug--false-positive.md
.github/scripts/: process_bench_ci.R  process_lint_ci.R
.github/workflows/: benchmark-comment.yml  benchmark.yml  build-vscode.yml  cargo-clippy.yml  cargo-test.yml  check-link-rot.yml  code-coverage.yml  compare-results.yml  docs.yml  ecosystem-check-comment.yml  release-vscode.yml
crates/flir-core/src/: check.rs  utils.rs
crates/flir-core/src/analyze/: mod.rs  while_.rs
crates/flir-core/src/lints/: mod.rs
crates/jarl/: Cargo.toml
crates/jarl-cli/: Cargo.toml
crates/jarl-cli/src/: args.rs  logging.rs  main.rs  output_format.rs
crates/jarl-core/: Cargo.toml
crates/jarl-core/src/: check.rs  config.rs  description.rs  diagnostic.rs  discovery.rs  error.rs  fix.rs  fs.rs  lib.rs  location.rs  rule_set.rs  rule_table.rs  settings.rs  toml.rs  utils_test.rs
crates/jarl-lsp/: Cargo.toml  README.md
crates/jarl-lsp/src/: client.rs  document.rs  lib.rs  lint.rs  server.rs  session.rs
crates/jarl-lsp/tests/: integration_tests.rs
crates/jarl/src/: args.rs  lib.rs  logging.rs
crates/jarl/tests/integration/helpers/: command_ext.rs
crates/jarl/tests/integration/snapshots/: integration__help__help-2.snap  integration__help__help-3.snap  integration__help__help.snap  integration__help__help_check-2.snap  integration__help__help_check.snap  integration__jarl__must_pass_path.snap
demos/: foo.R  foo2.R  foo3.R
docs/: _quarto.yml  changelog.md  contributing-rule-example.md  contributing.md  copy_readme.R  development.qmd  editors.md  index.md  index.qmd  make_docs.R  rules.md  rules.qmd  styles.css  using-jarl.md
docs/rules/: class_equals.md  comparison_negation.md  empty_file.md  expect_named.md  expect_not.md
editors/code/: README.md  package-lock.json  package.json
editors/code/src/: binary.ts  commands.ts  constants.ts  lsp.ts
editors/zed/: Cargo.toml  extension.toml
editors/zed/src/: lib.rs
r_derive/src/: lib.rs
src/: args.rs  check.rs  check_ast.rs  check_expression.rs  check_unused_vars.rs  config.rs  fix.rs  lang.rs  lib.rs  lints.rs  location.rs  main.rs  message.rs  rule_table.rs  session.rs  utils.rs  utils_test.rs
src/analyze/: binary_expression.rs  call.rs  for_loop.rs  mod.rs  subset.rs
src/callable/: core.rs
src/lints/: mod.rs
src/lints/any_duplicated/: any_duplicated.rs  mod.rs
src/lints/any_is_na/: any_is_na.rs  mod.rs
src/lints/assignment/: assignment.rs
src/lints/class_equals/: class_equals.rs  mod.rs
src/lints/duplicated_arguments/: duplicated_arguments.rs  mod.rs
src/lints/empty_assignment/: empty_assignment.rs
src/lints/equal_assignment/: mod.rs
src/lints/equals_na/: equals_na.rs  mod.rs
src/lints/for_loop_index/: for_loop_index.rs  mod.rs
src/lints/grepv/: grepv.rs  mod.rs
src/lints/is_numeric/: is_numeric.rs
src/lints/length_levels/: length_levels.rs  mod.rs
src/lints/length_test/: length_test.rs  mod.rs
src/lints/lengths/: lengths.rs  mod.rs
src/lints/redundant_equals/: mod.rs  redundant_equals.rs
src/lints/sample_int/: sample_int.rs
src/lints/sort/: mod.rs  sort.rs
src/lints/which_grepl/: mod.rs  which_grepl.rs
src/parser/: core.rs
src/parser/localization/: core.rs  languages.rs
src/semantic_model/: model.rs
tests/: test-EqualsNa.rs
tests/common/: mod.rs
tests/integration/: flir.rs  help.rs
tests/integration/snapshots/: integration__flir__parsing_error.snap
tests/snapshots/: test_EqualsNa__fix_output.snap  test_EqualsNa__lint_output.snap
(+206 files in other folders)
