[package]
name = "flint"
description = "R linter written in Rust"
authors = ["Etienne Bacher"]
version = "0.4.0"
edition = "2021"

license-file = "LICENSE.md"

repository = "https://github.com/etiennebacher/rfmt2/"
readme = "README.md"

[[bin]]
name = "r"
path = "src/main.rs"

[lib]
name = "r"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[build-dependencies]

[dependencies]
colored = "2.1.0"
rayon = "1.10.0"
serde = "1.0.215"
air_r_parser = { git = "https://github.com/posit-dev/air", version = "0.0.0" }
air_r_syntax = { git = "https://github.com/posit-dev/air", version = "0.0.0" }
