[package]
name = "flint"
description = "R linter written in Rust"
authors = ["Etienne Bacher"]
version = "0.0.1"
edition = "2021"

license-file = "LICENSE.md"

repository = "https://github.com/etiennebacher/rfmt2/"
readme = "README.md"

[[bin]]
name = "flint"
path = "src/main.rs"

[lib]
name = "flint"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[build-dependencies]

[dependencies]
colored = "2.1.0"
rayon = "1.10.0"
serde = "1.0.215"
air_r_parser = { git = "https://github.com/posit-dev/air", version = "0.0.0" }
air_r_syntax = { git = "https://github.com/posit-dev/air", version = "0.0.0" }
biome_rowan = "0.5.7"
clap = { version = "4.5.21", features = ["derive"] }
walkdir = "2.5.0"
