[package]
name = "jarl"
description = "Command-line interface for the jarl R linter"
version = "0.1.2"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.wix]
upgrade-guid = "2175C82C-5F5A-4047-A3CD-4B8EC81B6938"
path-guid = "F88AD27C-7F46-4F16-9B10-22CFCE1CE3E4"
license = false
eula = false

[[bin]]
name = "jarl"
path = "src/main.rs"

[dependencies]
# Core jarl functionality
jarl-core.workspace = true
# LSP functionality
jarl-lsp.workspace = true

# CLI specific dependencies
clap.workspace = true
colored.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

# Workspace and file system
air_workspace.workspace = true

# Utilities
tracing.workspace = true

# File system operations
air_fs.workspace = true

# Additional utilities
regex.workspace = true
tempfile.workspace = true
tracing-subscriber = "0.3.20"

# Disable default features because we just need basic ones and we absolutely
# don't want this crate to pull openssl-sys as dependency as it prevents
# cross-compiling in the release workflow: "Could not find directory of OpenSSL
# installation, and this `-sys` crate cannot proceed without this knowledge."
git2 = {version  = "0.20.2", default-features = false}
annotate-snippets = "0.11"

[dev-dependencies]
tempfile.workspace = true
insta.workspace = true
regex.workspace = true
